<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.redstonecloud</groupId>
    <artifactId>RedstoneCloud</artifactId>
    <version>0.1-beta</version>
    <packaging>pom</packaging>

    <developers>
        <developer>
            <name>RedstoneCloud</name>
            <organizationUrl>https://github.com/RedstoneCloud</organizationUrl>
        </developer>
        <developer>
            <name>TunikaKeks</name>
            <url>https://github.com/tunikakeks</url>
        </developer>
        <developer>
            <name>PleaseInsertNameHere</name>
            <url>https://github.com/PleaseInsertNameHere</url>
        </developer>
    </developers>
    
    <modules>
        <module>api</module>
        <module>cloud</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>